{
  "version": 4,
  "terraform_version": "1.12.3",
  "serial": 5,
  "lineage": "c0e6dde4-d10f-5416-55b9-b96d3aac3b9b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_eip",
      "name": "existing",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:elastic-ip/eipalloc-043267937659bb9a3",
            "association_id": "eipassoc-0b51ab73f2bdb9f1a",
            "domain": "vpc",
            "id": "eipalloc-043267937659bb9a3",
            "instance_id": "i-0a55e0bceb040e9f1",
            "network_interface_id": "eni-08a7cf0d216e32e41",
            "network_interface_owner_id": "195810096194",
            "private_dns": "ip-10-20-1-127.eu-west-1.compute.internal",
            "private_ip": "10.20.1.127",
            "public_dns": "ec2-63-32-80-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.32.80.204",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "itsps.org",
              "Project": "crm",
              "Stack": "simple"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-091ba0cd78e5cf932",
            "arn": "arn:aws:ec2:eu-west-1:195810096194:instance/i-043ab8b5071b4fe14",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "holism-testing-instance",
            "id": "i-043ab8b5071b4fe14",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "ips-ec2-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0956a9dc361e7d71d",
            "private_dns": "ip-10-20-1-141.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.141",
            "public_dns": "ec2-54-171-249-167.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.249.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:195810096194:key/50cc1e57-cd62-4fe0-9c07-93f0685ca614",
                "tags_all": {
                  "CostCentre": "testing",
                  "Environment": "testing",
                  "ManagedBy": "opentofu",
                  "Project": "holism"
                },
                "throughput": 125,
                "volume_id": "vol-028b3577fb17e14b2",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ddd1378df49374a",
            "tags": {
              "Name": "holism-testing"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing",
              "Project": "holism"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-07a5868e749c03031"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance",
            "aws_iam_role.instance",
            "aws_security_group.instance",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:internet-gateway/igw-0dd4047dd1e7dde4e",
            "id": "igw-0dd4047dd1e7dde4e",
            "owner_id": "195810096194",
            "tags": {
              "Name": "holism-testing"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing",
              "Project": "holism"
            },
            "vpc_id": "vpc-08cfe2b7d1b700013"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:route-table/rtb-044fd54e75f3a6c51",
            "id": "rtb-044fd54e75f3a6c51",
            "owner_id": "195810096194",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd4047dd1e7dde4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "holism-testing-public"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing-public",
              "Project": "holism"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfe2b7d1b700013"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b53eb94c90cd51e5",
            "route_table_id": "rtb-044fd54e75f3a6c51",
            "subnet_id": "subnet-04ddd1378df49374a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:security-group/sg-07a5868e749c03031",
            "description": "Single-instance test deployment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound: pulls images, sends mail, reaches Stripe",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a5868e749c03031",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "203.0.113.5/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "holism-testing",
            "name_prefix": "",
            "owner_id": "195810096194",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "holism-testing"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing",
              "Project": "holism"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cfe2b7d1b700013"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:subnet/subnet-04ddd1378df49374a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ddd1378df49374a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "195810096194",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "holism-testing-public"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing-public",
              "Project": "holism"
            },
            "vpc_id": "vpc-08cfe2b7d1b700013"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:195810096194:vpc/vpc-08cfe2b7d1b700013",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0fb5472c15ca22820",
            "default_route_table_id": "rtb-0be9617a867abd056",
            "default_security_group_id": "sg-0fb8d77b90256dc7c",
            "dhcp_options_id": "dopt-e7f02082",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cfe2b7d1b700013",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be9617a867abd056",
            "owner_id": "195810096194",
            "tags": {
              "Name": "holism-testing"
            },
            "tags_all": {
              "CostCentre": "testing",
              "Environment": "testing",
              "ManagedBy": "opentofu",
              "Name": "holism-testing",
              "Project": "holism"
            }
          }
        }
      ]
    }
  ]
}